--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: rgb(39, 25, 25);
+    background-color: black;
 }
 
 header {
@@ -20,10 +20,9 @@ header {
 }
 
 .buttons {
-    border: none;
     display: flex;
+    gap: 20px;
     padding: 30px 30px;
-    margin-left: 250px;
 }
 
 img {
@@ -34,4 +33,43 @@ h2 {
     color: aliceblue;
     font-family: 'robotoBI';
     font-size: 30px;
+    text-align: center;
 }
+
+.scores {
+    display: flex;
+    gap: 150px;
+    padding: 30px 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.buttons {
+    justify-content: center;
+    align-items: center;
+}
+
+.user-placeholder {
+    width: 150px;
+    height: 250px;
+    background-color: gray;
+    background-image: url("path/to/placeholder-image.png");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  .comp-placeholder {
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 250px;
+    background-color: gray;
+    background-image: url("path/to/placeholder-image.png");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  
+  .user {
+    display: inline-block;
+  }
